# optimizing-github-copilot

./: Dockerfile  LICENSE  README.md  README_APP.md  docker-compose.yml  prompt.md  pyproject.toml
.github/: copilot-instruction.md
app/: __init__.py  main.py
app/core/: __init__.py  config.py
app/routers/: __init__.py  health.py
tests/: conftest.py  debug.py  test_health.py
